ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ucwork.local
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
  - host: nginx.ucwork.local
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 8080
  - host: go.ucwork.local
    http:
      paths:
      - backend:
          serviceName: go
          servicePort: 8080
